--- a/assets/style.css
+++ b/assets/style.css
@@ -2,3 +2,46 @@
     text-align: center;
     background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
 }
+
+#mainDisplay {
+    flex-direction: column;
+}
+
+#pastCities {
+    display: flex;
+    flex-direction: column;
+}
+
+button {
+    margin-bottom: 5px;
+}
+
+.favorable {
+    background-color: green;
+    color:white;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.moderate {
+    background-color: yellow;
+    color:white;
+    padding: 5px;
+    border-radius: 5px;
+
+}
+
+.severe {
+    background-color: red;
+    color:white;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.card {
+    background-color: powderblue;
+    min-width: 150px;
+    max-width: 150px;
+    padding: 10px;
+    margin: 10px;
+}
